--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ body {
 }
 
 .todo{
+  display: flex;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -31,6 +32,10 @@ body {
     border-right: 1px solid #d0d0d0;
     padding: 60px 30px;
 
+  }
+  &__tasks {
+    display: flex;
+    flex: 1;
   }
 
 }
