--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -12,6 +12,13 @@
       cursor: pointer;
       padding: 10px 12px;
 
+      &:hover {
+        background-color: #fff;
+        img {
+          display: block;
+        }
+      }
+
       &.active {
         background-color: #fff;
         box-shadow: 0px 3px 10px rgba(0, 0, 0 ,0.85);
@@ -26,6 +33,12 @@
           }
         }
       }
-
+      span {
+        flex: 1;
+      }
+      img {
+        display: none;
+        opacity: 0.5;
+      }
     }
   }
