--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -11,7 +11,7 @@
       align-items: center;
       cursor: pointer;
       padding: 10px 12px;
-
+      margin-bottom: 10px;
       &:hover {
         background-color: #fff;
         img {
