--- a/src/components/Sidebar/AddButtonList/AddButtonList.scss
+++ b/src/components/Sidebar/AddButtonList/AddButtonList.scss
@@ -38,3 +38,17 @@
   }
 
 }
+.add-list__openPopup {
+  display: flex;
+  cursor: pointer;
+  padding: 10px 12px;
+    :hover {
+      opacity: 0.6;
+    }
+  p {
+    margin-right: 5px;
+  }
+  svg {
+    margin-top: 2px ;
+  }
+}
