--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -1,5 +1,8 @@
 .tasks {
   flex: 1;
+  &:hover {
+    cursor: default;
+  }
   &__items {
     .removeIcon img {
       opacity: 0;
@@ -25,7 +28,7 @@
     }
     &-input {
       input {
-        width: 100%;
+        width: 90%;
         padding: 10px;
         margin-top: 10px;
         //border: #7c7c7c;
@@ -58,23 +61,29 @@
     }
 
   }
-  &:hover {
-    cursor: pointer;
-  }
-  &__title {
+
+  &__title-block {
+    display: flex;
     margin-top: 60px;
     margin-left: 60px;
     color: #FFBBCC;
-    font-family: 'Montserrat', sans-serif;
     padding-bottom: 20px;
     border-bottom: 2px solid #f2f2f2;
+    h1 {
+        font-family: 'Montserrat', sans-serif;
+    }
+    .penSvg {
+      margin-left: 15px;
+      opacity: 0.4;
+      cursor: pointer;
 
-    &:hover {
-      img {
-        opacity: 0.2;
+      &:hover {
+        opacity: 0.8;
       }
     }
+
   }
+
 
   h2{
     font-size: 25px;
@@ -84,15 +93,6 @@
     color: #7c7c7c;
   }
 
-  .penSvg {
-    margin-left: 15px;
-    opacity: 0;
-    cursor: pointer;
-
-    &:hover {
-      opacity: 0.8;
-    }
-  }
 
   .checkbox {
     display: flex;
