--- a/src/components/Tasks/Tasks.scss
+++ b/src/components/Tasks/Tasks.scss
@@ -87,9 +87,9 @@
 
   h2{
     font-size: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    display: flex;
+    justify-content: center;
+    padding: 50px;
     color: #7c7c7c;
   }
 
